--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 Screen?.java
 !Screen10.java
 ?.tmp
@@ -5,4 +6,6 @@ config/config.*
 data1/config/values.dat
 data2/*
 !data2/data01.csv
-
+Main.class
+User.class
+passwords.dat
